--- a/assets/scss/components/sections/_about.scss
+++ b/assets/scss/components/sections/_about.scss
@@ -3,42 +3,32 @@
 	.flex__about {
 		flex-direction: column;
 		row-gap: 35px;
-		margin-top: 60px;
+		margin-top: 50px;
 		@include mediaSM {
 			row-gap: 50px;
 		}
 		@include mediaMD {
 			flex-direction: row;
 			align-items: center;
-			column-gap: 50px;
+			column-gap: 60px;
 			margin-top: 90px;
 		}
 		@include mediaLG {
 			column-gap: 30px;
 		}
 		.about__content {
-			@include mediaMD {
-				order: 2;
-			}
+			order: 2;
 			p.about__paragraph {
-				text-align: center;
+				text-align: start;
 				line-height: 32px;
 				font-family: var(--body-font);
+				font-weight: var(--font-medium);
 				margin-bottom: 15px;
-				@include mediaSM {
-					font-size: 25px;
-					line-height: 42px;
-					margin-bottom: 20px;
-				}
 				@include mediaMD {
-					font-size: 16px;
+					font-size: 17px;
 					line-height: 32px;
 					text-align: initial;
 					margin-bottom: 15px;
-				}
-				@include mediaLG {
-					font-size: 18px;
-					line-height: 34px;
 				}
 				span {
 					font-weight: var(--font-bold);
@@ -46,19 +36,13 @@
 				}
 			}
 			.about__btn {
-				width: 195px;
 				margin-top: 20px;
 				margin-inline: auto;
 				@include mediaSM {
-					width: 280px;
-					height: 56px;
 					margin-top: 25px;
 				}
 				@include mediaMD {
-					width: 195px;
-					height: 50px;
 					font-size: 17px;
-					margin-inline: initial;
 				}
 				@include mediaLG {
 					font-size: 18px;
@@ -82,16 +66,14 @@
 				order: 1;
 			}
 			.about__image {
+				display: block;
 				margin-inline: auto;
-				width: 100%;
+				width: 90%;
+				max-width: 400px;
 				height: initial;
 				@include mediaXXS {
-					width: 100%;
+					width: 90%;
 					height: initial;
-				}
-				@include mediaSM {
-					width: 100%;
-					height: 596px;
 				}
 				@include mediaMD {
 					width: 435px;
@@ -99,6 +81,8 @@
 				}
 				@include mediaLG {
 					width: 580px;
+					max-width: initial;
+					height: 400px;
 				}
 			}
 		}
