--- a/assets/scss/components/sections/_navbar.scss
+++ b/assets/scss/components/sections/_navbar.scss
@@ -1,19 +1,17 @@
 // For Javascript scrolling
 .scroll-header {
 	box-shadow: 0 4px 4px rgb(0 0 0 / 10%);
-
 	background-color: white;
 }
 header {
 	height: 70px;
 	align-items: center;
 	display: flex;
-	transition: 300ms ease-out;
 	position: fixed;
 	width: 100%;
 	top: 0;
+	background-color: white;
 	z-index: var(--z-fixed);
-	transition: 150ms linear;
 	padding-block: 40px;
 	.nav {
 		justify-content: space-between;
@@ -21,7 +19,7 @@ header {
 		width: 100%;
 		&__logo img {
 			width: 97px;
-			height: 43px;
+			height: 45px;
 			@include mediaSM {
 				width: 140px;
 				height: 55px;
@@ -49,27 +47,26 @@ header {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: center;
-			row-gap: 30px;
+			justify-content: flex-start;
+			row-gap: 25px;
 			list-style: none;
 			color: black;
+			padding-top: 80px;
 			.flex__buttons {
 				display: flex;
 				flex-direction: column;
 				row-gap: 15px;
-				margin-top: 20px;
+				margin-top: 15px;
 				@include mediaSM {
 					flex-direction: row;
 					column-gap: 20px;
 					margin-top: 35px;
 				}
 				.button {
-					width: 180px;
-					font-size: 15px;
-					@include mediaSM {
-						width: 215px;
-						font-size: 18px;
-					}
+					width: fit-content;
+					height: initial;
+					padding: 15px 40px;
+					font-size: 18px;
 					i {
 						margin-left: 10px;
 						font-size: 15px;
@@ -87,43 +84,6 @@ header {
 					}
 				}
 			}
-			.social__media {
-				display: flex;
-				column-gap: 20px;
-				@include mediaSM {
-					margin-top: 35px;
-					column-gap: 25px;
-				}
-				a {
-					font-size: 32px;
-					@include mediaSM {
-						font-size: 38px;
-					}
-				}
-				.facebook__link {
-					color: #3b5998;
-				}
-				.instagram__link {
-					color: #e5355b;
-				}
-				.linkedin__link {
-					color: #0077b5;
-				}
-			}
-			.nav__copyright {
-				font-size: 14px;
-				font-family: var(--paragraph-font);
-				line-height: 24px;
-				text-align: center;
-				@include mediaSM {
-					font-size: 16px;
-				}
-				br {
-					@include mediaSM {
-						display: none;
-					}
-				}
-			}
 			@include mediaSM {
 				width: 70%;
 			}
@@ -136,12 +96,15 @@ header {
 				box-shadow: initial;
 				background-color: initial;
 				border-radius: initial;
+				transition: none;
 				color: black;
 				height: initial;
 				gap: 30px;
 				.nav__close {
 					display: none;
 				}
+				li:nth-last-of-type(1),
+				li:nth-last-of-type(2),
 				.nav__link.mobile,
 				.flex__buttons,
 				.social__media,
@@ -151,48 +114,61 @@ header {
 			}
 			.nav__close {
 				position: absolute;
-				top: 20px;
-				right: 20px;
+				top: 10px;
+				right: 25px;
 				padding: 8px;
 				cursor: pointer;
 				i {
-					font-size: 2rem;
+					font-size: 45px;
 				}
 			}
 			li a {
-				font-size: 16px;
+				padding: 10px 40px;
+				font-size: 20px;
 				font-family: var(--body-font);
 				font-weight: var(--font-semi-bold);
 				position: relative;
+				transition: 150ms linear;
+				&:hover {
+					color: var(--first-color-dark);
+					@include mediaMD {
+						color: initial;
+					}
+				}
 				@include mediaSM {
-					font-size: 20px;
+					font-size: 22px;
 				}
 				@include mediaMD {
+					transition: none;
 					font-size: 18px;
+					padding: 0;
 				}
 				&::after {
-					content: '';
-					position: absolute;
-					left: 0;
-					bottom: -10px;
-					width: 0;
-					height: 5px;
-					background-color: var(--first-color-dark);
-					transition: 0.2s linear;
+					display: none;
+					@include mediaMD {
+						display: initial;
+						content: '';
+						position: absolute;
+						left: 0;
+						bottom: -10px;
+						width: 0;
+						height: 5px;
+						background-color: var(--first-color-dark);
+						transition: 0.2s linear;
+					}
 				}
 				&:hover::after,
 				&.active::after {
-					width: 100%;
+					@include mediaMD {
+						width: 100%;
+					}
 				}
 			}
 		}
 		&__toggle {
-			font-size: 2rem;
+			font-size: 45px;
 			color: black;
 			cursor: pointer;
-			@include mediaSM {
-				font-size: 2.25rem;
-			}
 			@include mediaMD {
 				display: none;
 			}
@@ -201,8 +177,6 @@ header {
 			display: none;
 			@include mediaMD {
 				display: flex;
-				border-radius: 5px;
-				font-size: 16px;
 				i {
 					margin-left: 10px;
 				}
