--- a/assets/scss/globals/_layout.scss
+++ b/assets/scss/globals/_layout.scss
@@ -1,5 +1,5 @@
 //=========== Google Font ============
-@import url('https://fonts.googleapis.com/css2?family=Karma&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,700&family=Signika:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karma:wght@300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Signika:wght@300;400;500;600;700&display=swap');
 
 /*=============== BASE ===============*/
 * {
@@ -11,6 +11,15 @@ a {
 	text-decoration: none;
 	color: inherit;
 }
+
+/*=============== BODY CSS CLASSES FOR JS ===============*/
+body.overflow-hidden {
+	overflow: hidden;
+	@include mediaMD {
+		overflow: initial;
+	}
+}
+
 /*=============== REUSABLE CSS CLASSES ===============*/
 
 .flex {
@@ -18,11 +27,11 @@ a {
 }
 
 ::selection {
-	background-color: var(--first-color-very-dark);
+	background-color: var(--secondary-color-light);
 	color: white;
 }
 .full-height {
-	height: 100vh;
+	height: fit-content;
 	background-color: var(--first-color-very-light);
 	position: relative;
 	@include mediaXXS {
@@ -59,7 +68,7 @@ a {
 		font-family: var(--title-font);
 		letter-spacing: 0.05em;
 		position: relative;
-		width: max-content;
+		width: fit-content;
 		margin-inline: auto;
 		@include mediaXXS {
 			font-size: 1.7rem;
